k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presenton-service
spec:
  selector:
    app: presenton
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
